--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
     "alpinejs": "^2.7.0",
+    "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.1",
     "postcss-clean": "^1.1.0",
     "postcss-cli": "^7.1.2",
     "prettier": "^2.1.1",
