--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "eleventy --serve & postcss src/styles/tailwind.css --o _tmp/style.css --watch",
+    "eleventy": "npx @11ty/eleventy --serve",
+    "postcss": "postcss styles/tailwind.css --o _tmp/style.css --watch",
+    "start": "npm-run-all --parallel postcss eleventy",
     "build": "ELEVENTY_PRODUCTION=true eleventy && NODE_ENV=production postcss styles/tailwind.css --o _site/style.css"
   },
   "devDependencies": {
@@ -12,6 +14,7 @@
     "alpinejs": "^2.7.0",
     "dotenv": "^8.2.0",
     "node-fetch": "^2.6.1",
+    "npm-run-all": "^4.1.5",
     "postcss-clean": "^1.1.0",
     "postcss-cli": "^7.1.2",
     "prettier": "^2.1.1",
