--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^1.8.8"
   },
   "dependencies": {
-    "dayjs": "^1.8.36"
+    "dayjs": "^1.8.36",
+    "markdown-it": "^11.0.1"
   }
 }
