--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@11ty/eleventy": "^0.11.0",
     "alpinejs": "^2.7.0",
     "dotenv": "^8.2.0",
+    "eleventy-plugin-pwa": "^1.0.8",
     "node-fetch": "^2.6.1",
     "npm-run-all": "^4.1.5",
     "postcss-clean": "^1.1.0",
